<resources>
    <string name="app_name">Tummy Recipe</string>
    <string name="hintSearchRecipes">Search for recipes</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="meal_name_sample">Meal Name</string>
    <string name="tv_ask_account">Already\nhave an \nAccount?</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password_tv">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="new_user_ask_tv">New User? Register Now!</string>
    <string name="tv_label_register">First \nstep to \nall your \nrecipe needs</string>
    <string name="hint_name_register">Name</string>
    <string name="hint_email_register">Email</string>
    <string name="hint_phone_number_register">Mobile Number</string>
    <string name="hint_password_register">Password</string>
    <string name="register_button">Register</string>
    <string name="have_an_account_ask_tv">Already have an account?</string>
    <string name="logout_button_main">Logout</string>
    <string name="tv_email_verify">Email not Verified!</string>
    <string name="btn_verify_text">Verify</string>
    <string name="btn_back_text">Back</string>
    <string name="seen">seen</string>
    <string name="play_step_number_or_play">play step (number) OR play</string>
    <string name="speak">Speak</string>
    <string name="speech_desc">speechDesc</string>
    <string name="stop">Stop</string>
    <string name="stop_desc">stopDesc</string>
    <string name="play">Play</string>
    <string name="play_desc">playDesc</string>
    <string name="source">SOURCE</string>
    <string name="share">SHARE</string>
    <string name="youtube">YOUTUBE</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot">…</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="shadow_desc">shadowDesc</string>
    <string name="meal_thumb_desc">mealThumbDesc</string>
    <string name="logo_desc">logoDesc</string>
    <string name="to_register_desc">toRegisterDesc</string>
    <string name="to_login_desc">toLoginDesc</string>
    <string name="image_category_bg_desc">image_category_bg</string>
    <string name="orange_background_desc">orange_background_desc</string>
    <string name="image_category_desc">image_category_desc</string>
    <string name="category_thumb_desc">category_thumb_desc</string>
    <string name="category_shimmer_desc">category_shimmer_desc</string>
    <string name="filter">filter</string>
    <string name="search_meal"><u>Search Meal</u></string>
    <string name="filter_choice"><u>Filter Choice</u></string>
    <string name="filter_meal"><u>Filter Meal</u></string>
    <string name="seen_meal"><u>Last 10 Seen Recipes</u></string>
    <string name="tv_please_verify_your_account">Please Verify Your Account</string>
</resources>