<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.RegisterActivity"
    android:layout_gravity="center"
    android:background="@color/orange"
    android:focusableInTouchMode="true"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="195dp">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_label_register"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="188dp"
                    android:layout_height="192dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="7dp"
                    android:contentDescription="@string/logo_desc"
                    android:src="@drawable/logo" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:autofillHints="name"
                            android:hint="@string/hint_name_register"
                            android:inputType="textPersonName"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:autofillHints="emailAddress"
                            android:hint="@string/hint_email_register"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:autofillHints="phone"
                            android:hint="@string/hint_phone_number_register"
                            android:inputType="phone"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:autofillHints="password"
                            android:hint="@string/hint_password_register"
                            android:inputType="textPassword"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/register_button" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"
                        android:text="@string/have_an_account_ask_tv"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:ignore="UsingOnClickInXml" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLoginClick"
        android:src="@drawable/ic_back_img"
        tools:ignore="UsingOnClickInXml"
        android:contentDescription="@string/to_login_desc" />

</RelativeLayout>