<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.EmailVerifyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarLayoutTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />


    </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="189dp"
                    android:layout_height="266dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/logo_desc"
                    android:src="@drawable/logo" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_centerInParent="true"
                    android:paddingBottom="100dp"
                    android:text="@string/tv_email_verify" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_centerInParent="true"
                    android:text="@string/tv_please_verify_your_account" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cirVerifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btn_verify_text" />


            </RelativeLayout>
        </LinearLayout>



</RelativeLayout>