<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".main.MainActivity">

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/orange" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="100dp"
                android:onClick="onLastSeen"
                android:text="@string/seen"
                tools:ignore="RelativeOverlap,UsingOnClickInXml" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                android:onClick="onLogoutClick"
                android:text="@string/logout_button_main"
                tools:ignore="RelativeOverlap,UsingOnClickInXml" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/darkOrange"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:hint="@string/hintSearchRecipes"
                    android:textColorHint="#ABFFFFFF"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    app:drawableLeftCompat="@drawable/search_icon"
                    app:drawableStartCompat="@drawable/search_icon"
                    android:drawablePadding="10dp"
                    android:importantForAutofill="no"
                    android:inputType="text">

                </EditText>

            </androidx.cardview.widget.CardView>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerHeader"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:foregroundGravity="center"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_below="@+id/cardSearch"
                android:layout_marginTop="10dp"/>

            <include
                android:id="@+id/shimmerMeal"
                layout="@layout/item_view_pager_header_shimmer" />

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewPagerHeader"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/meal_categories"
                android:textColor="@color/orange"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/viewPagerHeader"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:onClick="onFilterClick"
                android:text="@string/filter"
                tools:ignore="RelativeOverlap,UsingOnClickInXml" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:layout_below="@+id/titleCategory"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="50dp"/>

            <include
                android:id="@+id/shimmerCategory"
                layout="@layout/item_recycler_category_shimmer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:background="@color/darkOrange"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>